tests/baselines/reference/superAccess.errors.txt
tests/cases/compiler/superAccess.ts(9,24): error TS2576: Property 'S1' is a static member of type 'MyBase'
tests/cases/compiler/superAccess.ts(10,24): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
tests/cases/compiler/superAccess.ts(11,24): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


==== tests/cases/compiler/superAccess.ts (3 errors) ====
    class MyBase {
        static S1: number = 5;
        private S2: string = "test";
        f = () => 5;
    }
    
    class MyDerived extends MyBase {
        foo() {
            var l3 = super.S1;    // Expected => Error: Only public instance methods of the base class are accessible via the 'super' keyword
                           ~~
!!! error TS2576: Property 'S1' is a static member of type 'MyBase'
            var l4 = super.S2;    // Expected => Error: Only public instance methods of the base class are accessible via the 'super' keyword
                           ~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
            var l5 = super.f();   // Expected => Error: Only public instance methods of the base class are accessible via the 'super' keyword
                           ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    }